[package]
name = "rwebapi"
version = "0.1.0"
authors = ["Hien Pham <hienduyph@gmail.com>"]
edition = "2021"

[dependencies]
actix-web = "4.5.1"
actix-cors = "0.7.0"
actix-files = "0.6.5"
actix-identity = "0.7.1"
actix-redis = "0.13.0"
actix-threadpool = "0.3.3"

structured-logger = "1.0.3"
log = "0.4.21"

tonic = { version = "0.11.0", features = ["tls"] }
prost = "0.12.3"
tower = "0.4.13"
prost-types = "0.12.3"

warp = "0.3.6"

axum =  { version = "0.7.5", features = ["macros"] }
axum-extra = { version = "0.9.3", features = ["typed-header"]}
once_cell = "1.19.0"

rand = "0.8.5"
serde = "1.0.197"
serde_derive = "1.0.197"
serde_json = "1.0.115"
chrono = { version = "0.4.37", features = ["serde"] }
uuid = { version = "1.8.0", features = ["serde", "v4"] }
argon2rs = "0.2.5"
derive_more = "0.99.17"
dotenv = "0.15.0"
envy = "0.4.2"
jsonwebtoken = "9.3.0"
lazy_static = "1.4.0"
listenfd = "1.0.1"
rayon = "1.10.0"

redis = { version = "0.25.2", features = ["tokio-comp", "cluster-async"] }
deadpool-redis = { version = "0.14.0", features = ["rt_tokio_1", "serde"] }

validator = "0.17.0"
validator_derive = "0.17.0"

tokio = { version = "1.37.0", features = ["rt-multi-thread", "time", "fs", "macros", "net"] }
futures = { version = "0.3.30", default-features = false, features = ["alloc"] }
tokio-stream = { version = "0.1.15", features = ["net"] }
async-stream = "0.3.5"
async-trait = "0.1.79"

diesel = { version = "2.1.5", features = ["chrono", "mysql", "postgres", "sqlite", "r2d2"] }
r2d2 = "0.8.10"

sqlx = { version = "0.7.4", features = [ "runtime-tokio-rustls" , "postgres", "chrono", "migrate", "uuid", "json"], default-features = false }
sea-orm = { version = "0.12.15", features = [ "sqlx-postgres", "runtime-tokio-rustls", "macros", "debug-print", "with-chrono" ], default-features = false }

[build-dependencies]
tonic-build = { version = "0.11.0", features = ["prost"] }

[dev-dependencies]
actix-http-test = "3.2.0"

[features]
sqlite = []
default = ["sqlite"]
