[package]
name = "rwebapi"
version = "0.1.0"
authors = ["Hien Pham <hienduyph@gmail.com>"]
edition = "2021"
[workspace]

[dependencies]
actix-web = "4.10.2"
actix-cors = "0.7.1"
actix-files = "0.6.6"
actix-identity = "0.8.0"
actix-redis = "0.13.1"
actix-threadpool = "0.3.3"

structured-logger = "1.0.3"
log = "0.4.27"

tonic = { version = "0.13.0", features = ["tls-ring"] }
prost = "0.13.5"
tower = "0.5.2"
prost-types = "0.13.5"

warp = "0.3.7"

axum = "0.8.3"
axum-extra = { version = "0.10.1", features = ["typed-header"]}
once_cell = "1.21.3"

rand = "0.9.0"
serde = "1.0.219"
serde_derive = "1.0.219"
serde_json = "1.0.140"
chrono = { version = "0.4.40", features = ["serde"] }
uuid = { version = "1.16.0", features = ["serde", "v4"] }
argon2rs = "0.2.5"
derive_more = "2.0.1"
dotenv = "0.15.0"
envy = "0.4.2"
jsonwebtoken = "9.3.1"
lazy_static = "1.5.0"
listenfd = "1.0.2"
rayon = "1.10.0"
redis-async = "0.17.2"
validator = "0.20.0"
validator_derive = "0.20.0"

tokio = { version = "1.44.1", features = ["rt-multi-thread", "time", "fs", "macros", "net"] }
futures = { version = "0.3.31", default-features = false, features = ["alloc"] }
tokio-stream = { version = "0.1.17", features = ["net"] }
async-stream = "0.3.6"
async-trait = "0.1.88"

diesel = { version = "2.2.8", features = ["chrono", "mysql", "postgres", "sqlite", "r2d2"] }
r2d2 = "0.8.10"

sqlx = { version = "0.8.3", features = [ "runtime-tokio-rustls" , "postgres", "chrono", "migrate", "uuid", "json"], default-features = false }
sea-orm = { version = "1.1.8", features = [ "sqlx-postgres", "runtime-tokio-rustls", "macros", "debug-print", "with-chrono" ], default-features = false }

[build-dependencies]
tonic-build = { version = "0.13.0", features = ["prost"] }

[dev-dependencies]
actix-http-test = "3.2.0"

[features]
sqlite = []
default = ["sqlite"]

