[package]
name = "rweb-grpc"
version = "0.1.0"
authors = ["Hien Pham <hienduyph@gmail.com>"]
edition = "2018"

[dependencies]
tonic = { version = "0.2", features = ["tls"] }
prost = "0.6"
tokio = { version = "0.2", features = ["rt-threaded", "time", "stream", "fs", "macros", "uds"] }
futures = { version = "0.3", default-features = false, features = ["alloc"] }
async-stream = "0.2"
tower = "0.3"

# Required for routeguide
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.7"

# Required for wellknown types
prost-types = "0.6"

[build-dependencies]
tonic-build = { version = "0.2", features = ["prost"] }

[[bin]]
name = "rweb-grpc-client"
path = "src/client/main.rs"
