[package]
name = "rweb-grpc"
version = "0.1.0"
authors = ["Hien Pham <hienduyph@gmail.com>"]
edition = "2018"

[dependencies]
tonic = { version = "0.4.0", features = ["tls"] }
prost = "0.7.0"
tokio = { version = "1.4.0", features = ["rt-multi-thread", "time", "fs", "macros", "net"]}
futures = { version = "0.3.12", default-features = false, features = ["alloc"] }
tokio-stream = { version =  "0.1", features = ["net"] }
async-stream = "0.3.0"
tower = "0.4.5"

# Required for routeguide
serde = { version = "1.0.123", features = ["derive"] }
serde_json = "1.0.62"
rand = "0.8.3"

# Required for wellknown types
prost-types = "0.7.0"

[build-dependencies]
tonic-build = { version = "0.4.0", features = ["prost"] }

[[bin]]
name = "rweb-grpc-client"
path = "src/client/main.rs"
