[package]
name = "rweb-warp"
version = "0.1.0"
authors = ["Hien Pham <hienduyph@gmail.com>"]
edition = "2018"

[dependencies]
tokio = { version = "0.2.22", features = ["macros"] }
warp = "0.2.5"
serde = "1.0.116"
serde_derive = "1.0.116"
serde_json = "1.0.57"
rwebapi-users = { path = "../../components/users", version = "0.1.0" }
rwebapi-container= { path = "../../components/container", version = "0.1.0" }
rwebapi-core= { path = "../../components/core", version = "0.1.0" }
