[package]
name = "rweb-warp"
version = "0.1.0"
authors = ["Hien Pham <hienduyph@gmail.com>"]
edition = "2018"

[dependencies]
tokio = { version = "1.4.0", features = ["macros"] }
warp = "0.3.0"
serde = "1.0.123"
serde_derive = "1.0.123"
serde_json = "1.0.62"
rwebapi-users = { path = "../../components/users", version = "0.1.0" }
rwebapi-container= { path = "../../components/container", version = "0.1.0" }
rwebapi-core= { path = "../../components/core", version = "0.1.0" }
