[package]
name = "rwebapi-container"
version = "0.1.0"
authors = ["Hien Pham <hienduyph@gmail.com>"]
edition = "2018"

[dependencies]
rwebapi-users = { path = "../users", version = "0.1.0" }
rwebapi-core= { path = "../core", version = "0.1.0" }
rwebapi-diesel-impl= { path = "../diesel-impl", version = "0.1.0" }
