[package]
name = "rwebapi-diesel-impl"
version = "0.1.0"
authors = ["Hien Pham <hienduyph@gmail.com>"]
edition = "2018"

[dependencies]
argon2rs = "0.2.1"
chrono = { version = "0.4", features = ["serde"] }
derive_more = "0.15"

diesel = { version = "1.4.0", features = ["chrono", "mysql", "postgres", "sqlite", "r2d2", "uuidv07"]}
r2d2 = "0.8"
r2d2-diesel = "1.0.0"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
uuid = { version = "0.7", features = ["serde", "v4"] }
rwebapi-users = { path = "../users", version = "0.1.0" }
rwebapi-core= { path = "../core", version = "0.1.0" }
actix-threadpool = "0.3"
async-trait = "0.1"

[features]
cockroach = []
mysql = []
postgres = []
sqlite = []
default = ["sqlite"]
