[package]
name = "rwebapi-diesel-impl"
version = "0.1.0"
authors = ["Hien Pham <hienduyph@gmail.com>"]
edition = "2018"

[dependencies]
argon2rs = "0.2.5"
chrono = { version = "0.4.15", features = ["serde"] }
derive_more = "0.99.10"

diesel = { version = "1.4.5", features = ["chrono", "mysql", "postgres", "sqlite", "r2d2", "uuidv07"] }
r2d2 = "0.8.9"
r2d2-diesel = "1.0.0"
serde = "1.0.116"
serde_derive = "1.0.116"
serde_json = "1.0.57"
uuid = { version = "0.8.1", features = ["serde", "v4"] }
rwebapi-users = { path = "../users", version = "0.1.0" }
rwebapi-core= { path = "../core", version = "0.1.0" }
actix-threadpool = "0.3.3"
async-trait = "0.1.40"
futures = "0.3.5"

[features]
cockroach = []
mysql = []
postgres = []
sqlite = []
default = ["sqlite"]
