[package]
name = "rwebapi-users"
version = "0.1.0"
authors = ["Hien Pham <hienduyph@gmail.com>"]
edition = "2018"

[dependencies]
argon2rs = "0.2.1"
chrono = { version = "0.4", features = ["serde"] }
derive_more = "0.15"
diesel = { version = "1.4.0", features = ["chrono", "mysql", "postgres", "sqlite", "r2d2", "uuidv07"] }
dotenv = "0.14"
envy = "0.4"
env_logger = "0.6"
futures = "0.3.1"
jsonwebtoken = "7"
lazy_static = "1.4"
listenfd = "0.3"
log = "0.4"
rayon = "1.0"
redis-async = "0.6.1"
r2d2 = "0.8"
r2d2-diesel = "1.0.0"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
validator = "0.8.0"
validator_derive = "0.8.0"
uuid = { version = "0.7", features = ["serde", "v4"] }
rwebapi-core= { path = "../../components/core", version = "0.1.0" }

