[package]
name = "rwebapi-users"
version = "0.1.0"
authors = ["Hien Pham <hienduyph@gmail.com>"]
edition = "2018"

[dependencies]
argon2rs = "0.2.5"
chrono = { version = "0.4.19", features = ["serde"] }
derive_more = "0.99.11"
dotenv = "0.15.0"
envy = "0.4.2"
env_logger = "0.8.3"
futures = "0.3.12"
jsonwebtoken = "7.2.0"
lazy_static = "1.4.0"
listenfd = "0.3.3"
log = "0.4.14"
rayon = "1.5.0"
redis-async = "0.8.1"
r2d2 = "0.8.9"
r2d2-diesel = "1.0.0"
serde = "1.0.123"
serde_derive = "1.0.123"
serde_json = "1.0.62"
validator = "0.12.0"
validator_derive = "0.12.0"
uuid = { version = "0.8.2", features = ["serde", "v4"] }
async-trait = "0.1.42"
rwebapi-core= { path = "../../components/core", version = "0.1.0" }

